--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 data/cruise_post.db
 data/cruise_pre.db
-pre_data.txt
-requirements.in
-data/cruise_pre
-cruise_pre
 .ipynb_checkpoints/eda-checkpoint.ipynb
+src/__pycache__/feature_engineering.cpython-311.pyc
+src/__pycache__/data.cpython-311.pyc
