Added Logistic Regression

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -15,10 +15,12 @@ models:
 hyperparameters:
   RandomForestClassifier:
     n_estimators: 100
+    random_state: 42
     max_depth: 5
   LogisticRegression:
     C: 1.0
     penalty: l2
+    max_iter: 200
   GradientBoostingClassifier:
     n_estimators: 100
     learning_rate: 0.1
