--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ data/cruise_pre.db
 .ipynb_checkpoints/eda-checkpoint.ipynb
 src/__pycache__/feature_engineering.cpython-311.pyc
 src/__pycache__/data.cpython-311.pyc
+src/temp.py
