--- a/src/config.yaml
+++ b/src/config.yaml
@@ -14,14 +14,15 @@ models:
 
 hyperparameters:
   RandomForestClassifier:
-    n_estimators: 100
+    n_estimators: 200
     random_state: 42
-    max_depth: 5
+    max_depth: 7
   LogisticRegression:
-    C: 1.0
+    C: 0.8
     penalty: l2
     max_iter: 700
+    solver: 'sag'
   GradientBoostingClassifier:
-    n_estimators: 100
-    learning_rate: 0.1
+    n_estimators: 200
+    learning_rate: 0.2
     random_state: 42
